eks_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-a
spec:
  selector:
    app: demo-model-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
